--- a/app/src/main/res/layout/player_homepage.xml
+++ b/app/src/main/res/layout/player_homepage.xml
@@ -9,8 +9,7 @@
         android:id="@+id/player_home_header_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center"
         android:textSize="36dp"
         android:textStyle="bold"
@@ -20,7 +19,7 @@
         android:id="@+id/player_headshot_imageswitcher"
         android:layout_width="175dp"
         android:layout_height="175dp"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_below="@id/player_home_header_text">
         <ImageView
             android:id="@+id/player_headshot_image"
@@ -30,27 +29,17 @@
             android:scaleType="centerInside"/>
     </ImageSwitcher>
 
-    <Button
-        android:id="@+id/request_new_image"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:layout_below="@id/player_headshot_imageswitcher"
-        android:layout_alignLeft="@id/player_headshot_imageswitcher"
-        android:layout_alignRight="@id/player_headshot_imageswitcher"
-        android:text="Take New Picture"/>
-
     <TextView
         android:id="@+id/player_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/player_headshot_imageswitcher"
         android:layout_below="@id/player_home_header_text"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_alignParentRight="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
+        android:gravity="center"
         android:textSize="26dp"
         android:textStyle="bold"
         android:text="Matthew Stafford"/>
@@ -59,12 +48,13 @@
         android:id="@+id/player_position_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/player_headshot_imageswitcher"
         android:layout_below="@id/player_name_textview"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_alignParentRight="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
+        android:gravity="center"
         android:textSize="22dp"
         android:textStyle="italic"
         android:text="Quarterback"/>
@@ -73,12 +63,13 @@
         android:id="@+id/player_team_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@id/player_headshot_imageswitcher"
         android:layout_below="@id/player_position_textview"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_alignParentRight="true"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
+        android:gravity="center"
         android:textSize="22dp"
         android:textStyle="italic"
         android:text="Detroit Lions"/>
@@ -87,12 +78,15 @@
         android:id="@+id/other_players"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/request_new_image"
+        android:layout_marginTop="4dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/player_headshot_imageswitcher"
         android:gravity="center"
-        android:text="OTHER AVAILABLE PLAYERS"/>
+        android:text="PLAYER STATISTICS"/>
 
     <ListView
-        android:id="@+id/available_players_listview"
+        android:id="@+id/current_player_listview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
