Added BottomNav and ViewPager

--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/white"
+    app:bbn_rippleColor="@color/colorPrimaryRipple">
 
     <item
         android:id="@+id/navigation_home"
+        android:color="@color/colorPrimaryTabOne"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_dashboard"
+        android:color="@color/colorPrimaryTabTwo"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
 
     <item
         android:id="@+id/navigation_stats"
+        android:color="@color/colorPrimaryTabThree"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="@string/title_add" />
 
