--- a/app/src/main/res/layout/player_homepage.xml
+++ b/app/src/main/res/layout/player_homepage.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -75,7 +76,7 @@
         android:text="Detroit Lions"/>
 
     <TextView
-        android:id="@+id/other_players"
+        android:id="@+id/player_stats"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -88,10 +89,9 @@
     <ListView
         android:id="@+id/current_player_listview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="100dp"
-        android:layout_below="@id/other_players">
+        android:layout_below="@id/player_stats">
     </ListView>
 
     <Button
@@ -99,8 +99,8 @@
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"
-        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        android:layout_below="@id/current_player_listview"
         android:text="ADD NEW PLAYER"/>
 
 
