--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
 
     <dimen name="fab_margin_bottom">8dp</dimen>
     <dimen name="fab_margin_right">16dp</dimen>
+    <dimen name="activity_horizontal_half_margin">12dp</dimen>
 </resources>
