--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/football_field"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:bbn_entries="@menu/navigation"
+        app:bbn_itemColorInactive="@color/colorAccent"
         app:bbn_scrollEnabled="true"
         app:layout_behavior="@string/bbn_phone_view_behavior"
         />
