--- a/app/src/main/res/layout/player_settings.xml
+++ b/app/src/main/res/layout/player_settings.xml
@@ -11,8 +11,25 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center"
-        android:textSize="36dp"
+        android:textSize="36sp"
         android:textStyle="bold"
-        android:text="PLAYER SETTINGS"/>
+        android:text="Modify Player Roster"/>
+    <TextView
+        android:id="@+id/player_settings_two"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="32sp"
+        android:layout_below="@id/player_settings"
+        android:textStyle="bold"
+        android:text="Coming Soon"/>
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/main_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_below="@id/player_settings_two"
+        android:layout_marginBottom="60dp"
+        android:layout_height="wrap_content"/>
+
 
 </RelativeLayout>
