--- a/app/src/main/res/layout-land/player_homepage.xml
+++ b/app/src/main/res/layout-land/player_homepage.xml
@@ -4,18 +4,32 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
+    <RelativeLayout
         android:id="@+id/player_home_header_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:gravity="center"
-        android:textSize="36sp"
-        android:textStyle="bold"
-        android:fontFamily="@font/digital7"
-        android:text="@string/matthew_stafford"/>
-
+        android:layout_centerHorizontal="true">
+        <TextView
+            android:id="@+id/player_home_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:gravity="center"
+            android:textSize="@dimen/large_formatted_text_size_36sp"
+            android:textStyle="bold"
+            android:fontFamily="@font/digital7"
+            android:text="@string/matthew_stafford"/>
+        <TextView
+            android:id="@+id/player_position_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/player_home_header"
+            android:layout_margin="@dimen/activity_horizontal_margin"
+            android:gravity="center"
+            android:fontFamily="@font/digital7"
+            android:textSize="@dimen/large_formatted_text_size_36sp"
+            android:text="@string/quarterback"/>
+    </RelativeLayout>
     <RelativeLayout
         android:id="@+id/player_details_layout"
         android:layout_width="match_parent"
@@ -25,33 +39,17 @@
         android:layout_below="@id/player_home_header_text">
         <ImageView
             android:id="@+id/player_headshot_image"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
             android:background="@drawable/stafford_headshot"
             android:scaleType="centerInside"/>
 
         <TextView
-            android:id="@+id/player_position_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@id/player_headshot_image"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
-            android:layout_marginBottom="@dimen/activity_vertical_half_margin"
-            android:gravity="center"
-            android:fontFamily="@font/digital7"
-            android:textSize="@dimen/standard_text_size_26sp"
-            android:textStyle="italic"
-            android:text="@string/quarterback"/>
-
-        <TextView
             android:id="@+id/player_team_textview"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_toEndOf="@id/player_headshot_image"
-            android:layout_below="@id/player_position_textview"
-            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_below="@id/player_headshot_image"
             android:layout_marginBottom="@dimen/activity_vertical_half_margin"
             android:gravity="center"
             android:fontFamily="@font/digital7"
@@ -61,22 +59,23 @@
     </RelativeLayout>
     <TextView
         android:id="@+id/player_stats"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_below="@id/player_details_layout"
+        android:layout_marginEnd="46dp"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@id/player_home_header_text"
         android:gravity="center"
         android:textColor="@color/colorPrimaryDark"
         android:fontFamily="@font/digital7"
-        android:textSize="@dimen/standard_display_text_size_24sp"
+        android:textSize="@dimen/large_formatted_text_size_36sp"
         android:text="@string/player_statistics"/>
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:layout_marginTop="@dimen/activity_vertical_half_margin"
-        android:layout_centerHorizontal="true"
+        android:layout_marginEnd="46dp"
+        android:layout_alignParentEnd="true"
         android:layout_below="@id/player_stats"
         android:background="#99000000">
         <android.support.constraint.ConstraintLayout
