--- a/app/src/main/res/layout-land/player_statkeeper.xml
+++ b/app/src/main/res/layout-land/player_statkeeper.xml
@@ -10,32 +10,23 @@
         android:id="@+id/player_name_textview_statkeeper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:layout_margin="@dimen/activity_horizontal_half_margin"
         android:gravity="center"
         android:textSize="36sp"
         android:fontFamily="@font/digital7"
         android:textStyle="bold"
         android:text="@string/matthew_stafford"/>
 
-    <TextView
-        android:id="@+id/player_position_textview_statkeeper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/player_name_textview_statkeeper"
-        android:gravity="center"
-        android:fontFamily="@font/digital7"
-        android:textSize="26sp"
-        android:text="@string/quarterback"/>
 
     <View
         android:id="@+id/scoring_view_break"
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:layout_marginTop="@dimen/activity_vertical_half_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
         android:layout_marginLeft="@dimen/activity_horizontal_half_margin"
         android:layout_marginRight="@dimen/activity_horizontal_half_margin"
-        android:layout_below="@id/player_position_textview_statkeeper"
+        android:layout_below="@id/player_name_textview_statkeeper"
         android:background="@color/colorPrimary"/>
 
     <TextView
@@ -43,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/scoring_view_break"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:textStyle="bold"
         android:fontFamily="@font/digital7"
@@ -53,9 +44,8 @@
         android:id="@+id/passing_yards_seekbar_display"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_half_margin"
-        android:layout_below="@id/scoring_view_break"
-        android:layout_toEndOf="@id/passing_text_field"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/passing_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:text="@string/scoreboard_3eights"/>
@@ -65,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/passing_yards_seekbar_display"
-        android:layout_below="@id/scoring_view_break"
+        android:layout_below="@id/passing_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:textColor="@color/colorPrimaryLight"
@@ -74,10 +64,11 @@
         android:id="@+id/seekBar_passing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/passing_text_field"
+        android:layout_alignTop="@id/passing_text_field"
+        android:layout_toRightOf="@id/passing_text_field"
         android:layout_marginTop="@dimen/activity_vertical_half_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_half_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
         android:layout_marginRight="@dimen/activity_horizontal_half_margin"
         app:bsb_max="100"
         app:bsb_min="-50"
@@ -96,8 +87,9 @@
         android:id="@+id/rushing_text_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/seekBar_passing"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_below="@id/passing_yards_seekbar_display"
+        android:layout_marginTop="@dimen/activity_vertical_half_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:textStyle="bold"
         android:fontFamily="@font/digital7"
@@ -107,9 +99,8 @@
         android:id="@+id/rushing_yards_seekbar_display"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_half_margin"
-        android:layout_below="@id/seekBar_passing"
-        android:layout_toEndOf="@id/passing_text_field"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/rushing_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:text="@string/scoreboard_3eights"/>
@@ -119,7 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/rushing_yards_seekbar_display"
-        android:layout_below="@id/seekBar_passing"
+        android:layout_below="@id/rushing_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:textColor="@color/colorPrimaryLight"
@@ -128,10 +119,11 @@
         android:id="@+id/seekBar_rushing"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rushing_text_field"
+        android:layout_alignTop="@id/rushing_text_field"
+        android:layout_toRightOf="@id/rushing_text_field"
         android:layout_marginTop="@dimen/activity_vertical_half_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_half_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
         android:layout_marginRight="@dimen/activity_horizontal_half_margin"
         app:bsb_max="100"
         app:bsb_min="-50"
@@ -151,7 +143,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/seekBar_rushing"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_half_margin"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
         android:layout_marginStart="@dimen/activity_horizontal_margin"
         android:textStyle="bold"
         android:fontFamily="@font/digital7"
@@ -161,9 +154,8 @@
         android:id="@+id/receiving_yards_seekbar_display"
         android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_half_margin"
-        android:layout_below="@id/seekBar_rushing"
-        android:layout_toEndOf="@id/passing_text_field"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_below="@id/receiving_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:text="@string/scoreboard_3eights"/>
@@ -173,7 +165,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_toEndOf="@id/receiving_yards_seekbar_display"
-        android:layout_below="@id/seekBar_rushing"
+        android:layout_below="@id/receiving_text_field"
         android:fontFamily="@font/digital7"
         android:textSize="26sp"
         android:textColor="@color/colorPrimaryLight"
@@ -183,10 +175,11 @@
         android:id="@+id/seekBar_receiving"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/receiving_text_field"
+        android:layout_alignTop="@id/receiving_text_field"
+        android:layout_toRightOf="@id/receiving_text_field"
         android:layout_marginTop="@dimen/activity_vertical_half_margin"
         android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginLeft="@dimen/activity_horizontal_half_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_double_margin"
         android:layout_marginRight="@dimen/activity_horizontal_half_margin"
         app:bsb_max="100"
         app:bsb_min="-50"
@@ -200,23 +193,26 @@
         app:bsb_second_track_color="@color/colorTrackSecondary"
         app:bsb_touch_to_seek="true"
         />
-
-    <Button
-        android:id="@+id/touchdown_button"
-        android:layout_width="match_parent"
-        style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
-        android:layout_below="@id/seekBar_receiving"
-        android:fontFamily="@font/digital7"
-        android:textSize="@dimen/standard_text_size_26sp"
-        android:text="@string/touchdown"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/touchdown_button"
+        android:layout_marginTop="@dimen/activity_vertical_half_margin"
+        android:layout_below="@id/submit_receiving_yards"
         android:orientation="horizontal">
+    <Button
+        android:id="@+id/touchdown_button"
+        android:layout_width="wrap_content"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/activity_vertical_half_margin"
+        android:fontFamily="@font/digital7"
+        android:textSize="@dimen/standard_text_size_26sp"
+        android:text="@string/touchdown"/>
+    <View
+        android:layout_width="1dp"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary"/>
     <Button
         android:id="@+id/incomplete_button"
         android:layout_width="wrap_content"
