--- a/app/src/main/res/layout/player_settings.xml
+++ b/app/src/main/res/layout/player_settings.xml
@@ -11,18 +11,18 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
         android:gravity="center"
-        android:textSize="36sp"
+        android:textSize="@dimen/large_formatted_text_size_36sp"
         android:textStyle="bold"
-        android:text="Modify Player Roster"/>
+        android:text="@string/modify_player_roster"/>
     <TextView
         android:id="@+id/player_settings_two"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="32sp"
+        android:textSize="@dimen/large_formatted_text_size_32sp"
         android:layout_below="@id/player_settings"
         android:textStyle="bold"
-        android:text="Coming Soon"/>
+        android:text="@string/coming_soon"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/main_recycler_view"
