--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,10 +1,16 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_horizontal_half_margin">8dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_vertical_half_margin">8dp</dimen>
 
     <dimen name="fab_margin_bottom">8dp</dimen>
     <dimen name="fab_margin_right">16dp</dimen>
-    <dimen name="activity_horizontal_half_margin">12dp</dimen>
+
+    <dimen name="standard_text_size_26sp">26sp</dimen>
+    <dimen name="standard_display_text_size_24sp">24sp</dimen>
+    <dimen name="large_formatted_text_size_36sp">36sp</dimen>
+    <dimen name="large_formatted_text_size_32sp">32sp</dimen>
+    <dimen name="activity_horizontal_double_margin">32dp</dimen>
 </resources>
